--- a/_includes/Programming.html
+++ b/_includes/Programming.html
@@ -172,7 +172,7 @@ pre code {
 <div id="cuál-es-la-salida-del-siguiente-algorítmo" class="section level5">
 <h5>¿Cuál es la salida del siguiente algorítmo?</h5>
 <pre class="cpp"><code>  cout &lt;&lt; &quot;Hola Mundo&quot;;</code></pre>
-<p>ID: <strong>P-01</strong></p>
+<p><span style="color:#103e75">ID: <strong>P-01</strong></span></p>
 </div>
 </div>
 <div id="algorítmos-condicionales" class="section level4">
@@ -185,7 +185,7 @@ pre code {
   }else{
     System.out.println(n + &quot; es número impar&quot;);
   }</code></pre>
-<p>ID: <strong>P-02</strong></p>
+<p><span style="color:#103e75">ID: <strong>P-02</strong></span></p>
 </div>
 </div>
 <div id="algorítmos-iterativos" class="section level4">
@@ -198,7 +198,7 @@ for i in range(n):
   s = s + i
   
 print(s)</code></pre>
-<p>ID: <strong>P-03</strong></p>
+<p><span style="color:#103e75">ID: <strong>P-03</strong></span></p>
 </div>
 </div>
 <div id="algoritmos-recursivos" class="section level4">
@@ -211,7 +211,7 @@ print(s)</code></pre>
     }
     return n*factorialRecursivo(n-1);           
 }</code></pre>
-<p>ID: <strong>P-04</strong></p>
+<p><span style="color:#103e75">ID: <strong>P-04</strong></span></p>
 </div>
 <div id="encontrar-la-salida-para-el-siguiente-algorítmo-recursivo-con-n10" class="section level5">
 <h5>4.2. Encontrar la salida para el siguiente algorítmo recursivo con <span class="math inline">\(n=10\)</span></h5>
@@ -222,7 +222,7 @@ print(s)</code></pre>
         return n%10 + sumaDig(n/10);
     }
 }</code></pre>
-<p>ID: <strong>P-05</strong></p>
+<p><span style="color:#103e75">ID: <strong>P-05</strong></span></p>
 </div>
 </div>
 <div id="series" class="section level4">
@@ -232,7 +232,7 @@ print(s)</code></pre>
   cat(((1/sqrt(5))*((1+sqrt(5))/2)**n)-((1/sqrt(5))*((1-sqrt(5))/2)**n), &quot; &quot;)
 }</code></pre>
 <pre><code>## 0  1  1  2  3  5  8  13  21  34  55</code></pre>
-<p>ID: <strong>P-06</strong></p>
+<p><span style="color:#103e75">ID: <strong>P-06</strong></span></p>
 </div>
 
 
